Fix scrollbar.

--- a/src/components/CustomSlider.css
+++ b/src/components/CustomSlider.css
@@ -3,12 +3,11 @@
 }
 
 .custom-slider__input {
-  width: 100%;
+	width: 100%;
+	/* !modified  from px*/
   min-width: 100%;
   background-color: rgb(53, 52, 52);
 	color: white;
-	/* margin-bottom: 3%; */
-	/* bottom: 5px; */
   position: relative;
   overflow-y: hidden;
   overflow-x: auto;
@@ -16,8 +15,8 @@
 }
 
 .custom-slider__input::-webkit-slider-runnable-track {
-	width: 290px;
-	height: 16px;
+	width: 100%;
+	height: 100%;
 	box-shadow: inset 0 0 6px rgba(80, 80, 80, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(80, 80, 80, 0.3);
   background: #666666;
@@ -31,8 +30,10 @@
 	height: 16px;
 	box-shadow: inset 0 0 6px rgba(80, 80, 80, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(66, 62, 62, 0.3);
-	/* width: 30%; */
-  background: #d3d3d3;
+	background: #d3d3d3;
+	/* @media screen {
+		
+	} */
 }
 
 .custom-slider__input:focus {
@@ -46,7 +47,7 @@
 
 .carousel-container-with-scrollbar {
 	width: 88%;
-	padding-bottom: 30px;
+	padding-bottom: 3%;
 }
 
 .custom-slider {
@@ -57,8 +58,8 @@
 
 .root-slider {
 	flex-direction: row;
-	width: 100%;
 	display: flex;
+	padding-bottom: 3%;
 	align-items: center;
 	justify-content: center;
 }
