--- a/src/components/EditableTextField.module.css
+++ b/src/components/EditableTextField.module.css
@@ -3,6 +3,9 @@
 	background: #ECECEC;
 	width: 100%;
 	height: 50px;
+	/* @media screen {
+		
+	} */
 }
 
 .textfield-label{
@@ -11,4 +14,7 @@
 	background-color: '#F3E9FC';
 	background: #ECECEC;
 	cursor: pointer;
+	/* @media screen {
+		
+	} */
 }
